Changes to JavaHandler - Should work on all computers without adjustment.

--- a/Lab/Instructor/style.css
+++ b/Lab/Instructor/style.css
@@ -44,3 +44,11 @@
 .add-step {
     text-align: center;
 }
+
+textarea {
+    width: 100%;
+    margin-bottom: 20px;
+    margin-right: auto;
+    margin-left: auto;
+    min-height: 150px;
+}
