Fixed Memory Leak in Steps Fixed Save Step Functionality

--- a/Lab/Instructor/style.css
+++ b/Lab/Instructor/style.css
@@ -50,5 +50,10 @@ textarea {
     margin-bottom: 20px;
     margin-right: auto;
     margin-left: auto;
-    min-height: 150px;
+    min-height: 100px;
+    height: 150px;
+}
+
+#instructions {
+    height: 100px;
 }
