--- a/Lab/Instructor/style.css
+++ b/Lab/Instructor/style.css
@@ -8,8 +8,11 @@
 
 .lab-window {
     padding-top: 0px;
-    width: 100%;
+    width: auto;
     height: auto;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     border: #666666 4px solid;
 }
 
@@ -20,9 +23,7 @@
     position: relative;
     top: 0;
 }
-.lab-window-header h1 {
-    padding-left: 10px;
-}
+
 
 .step-window {
     width: 90%;
@@ -56,4 +57,10 @@ textarea {
 
 #instructions {
     height: 100px;
+}
+
+.lab-title {
+    text-align: center;
+    margin-top: 0px;
+    font-size: 40px;
 }
