Changes to JavaHandler, Program Flow

--- a/Lab/Student/style.css
+++ b/Lab/Student/style.css
@@ -216,7 +216,7 @@ textarea {
 .wrap {
     float: left;
     width: 100%;
-    height: 30px;
+    height: 100%;
     z-index:1;white-space: nowrap;
     overflow:hidden;
 }
@@ -225,7 +225,7 @@ textarea {
     float:left;
     margin:0;
     margin-left:0.5%;
-    height: 30px;
+    height: 100%;
     position: relative;
     display: inline-block;
     text-align: center;
@@ -273,6 +273,14 @@ button {
     background: none;
     border: none;
 }
+.current {
+    color: #a4001d;
+}
+
+.current:before, .current:after {
+    background: rgba(255, 255, 255, 0.3);
+}
+
 .previous {
     width: 15%;
     margin-right: 2%;
@@ -314,4 +322,42 @@ button {
     -moz-transform: skew(-45deg);
     transform: skew(-45deg);
 
+}
+
+/* Style the list */
+ul.tab {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+/* Float the list items side by side */
+ul.tab li {float: left;}
+
+/* Style the links inside the list items */
+ul.tab li a {
+    display: inline-block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    transition: 0.3s;
+    font-size: 17px;
+}
+
+/* Change background color of links on hover */
+ul.tab li a:hover {background-color: #ddd;}
+
+/* Create an active/current tablink class */
+ul.tab li a:focus, .active {background-color: #ccc;}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
 }
